--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
+ <head>
+    <title>Intro HTML</title>
+    <link rel="stylesheet" href="./estilos.css">
+ </head>
     <body>
-        <h1>VISUAL Xdddddddddddddddddddd plis :c</h1>
+        <h1>HOLA H1</h1>
+        <h2>HOLA H2</h2>
+        <h3>HOLA H3</h3>
+        <h4>HOLA H4</h4>
     </body>
 </html>
